Improve ad sizing if ad size is not defined as an inline style

--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
 
         .header {
             padding: 20px;
-            width: 100%;
+            text-align: center;
         }
 
         .main {
@@ -39,7 +39,7 @@
 	<!-- A basic example of how to add an ad to the top of your page -->
 	<!-- Replace the data-cc-site and data-cc-slot properties with the values from your ContextCue account -->
     <ins
-			style="display:block;width:728px;height:90px;margin:0 auto;"
+			style="display:block;"
             class="adsbycontextcue"
 			data-cc-site="5a9aa6bf-70ee-466f-8f9a-5c954d5dbc53"
 			data-cc-slot="xsbQ1Tq8V"
